// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test retrieval of the current theme 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#c0c0c0",
  "buttonColor": "#666666",
  "chevronColor": "#666666",
  "color": "#000000",
  "fontFamily": "OpenSans, Georgia, serif",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#c0c0c0",
  "inputBorderColor": "#c0c0c0",
  "itemHoverColor": "#bedb39",
  "searchFocus": "#fd7400",
  "searchMatch": "#1f8a70",
  "selectedBackgroundColor": "#1f8a70",
  "selectedForegroundColor": "#ffe11a",
  "titleBarBackgroundColor": "#004358",
  "titleBarForegroundColor": "#ffe11a",
  "tooltipBackgroundColor": "#708090",
  "tooltipForegroundColor": "#ffffff",
  "transitionDelay": "0.5s",
}
`;

exports[`Test retrieving a bad theme (doesn't exist) 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#c0c0c0",
  "buttonColor": "#666666",
  "chevronColor": "#666666",
  "color": "#000000",
  "fontFamily": "OpenSans, Georgia, serif",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#c0c0c0",
  "inputBorderColor": "#c0c0c0",
  "itemHoverColor": "#bedb39",
  "searchFocus": "#fd7400",
  "searchMatch": "#1f8a70",
  "selectedBackgroundColor": "#1f8a70",
  "selectedForegroundColor": "#ffe11a",
  "titleBarBackgroundColor": "#004358",
  "titleBarForegroundColor": "#ffe11a",
  "tooltipBackgroundColor": "#708090",
  "tooltipForegroundColor": "#ffffff",
  "transitionDelay": "0.5s",
}
`;

exports[`Test retrieving the dark theme 1`] = `
Object {
  "backgroundColor": "#000000",
  "borderColor": "#004358",
  "buttonColor": "#666666",
  "chevronColor": "#666666",
  "color": "#ffffff",
  "fontFamily": "OpenSans, Georgia, serif",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#ffe11a",
  "inputBorderColor": "#c0c0c0",
  "itemHoverColor": "#bedb39",
  "searchFocus": "#fd7400",
  "searchMatch": "#1f8a70",
  "selectedBackgroundColor": "#004358",
  "selectedForegroundColor": "#ffffff",
  "titleBarBackgroundColor": "#004358",
  "titleBarForegroundColor": "#ffe11a",
  "tooltipBackgroundColor": "#666666",
  "tooltipForegroundColor": "#ffffff",
  "transitionDelay": "0.5s",
}
`;

exports[`Test retrieving the light theme 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#004358",
  "buttonColor": "#666666",
  "chevronColor": "#666666",
  "color": "#000000",
  "fontFamily": "OpenSans, Georgia, serif",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#ffe11a",
  "inputBorderColor": "#c0c0c0",
  "itemHoverColor": "#bedb39",
  "searchFocus": "#fd7400",
  "searchMatch": "#1f8a70",
  "selectedBackgroundColor": "#004358",
  "selectedForegroundColor": "#ffffff",
  "titleBarBackgroundColor": "#004358",
  "titleBarForegroundColor": "#ffe11a",
  "tooltipBackgroundColor": "#666666",
  "tooltipForegroundColor": "#ffffff",
  "transitionDelay": "0.5s",
}
`;

exports[`Test setting and retrieving a custom theme 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#c0c0c0",
  "buttonColor": "#666666",
  "chevronColor": "#666666",
  "color": "#000000",
  "fontFamily": "OpenSans, Georgia, serif",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#c0c0c0",
  "inputBorderColor": "#c0c0c0",
  "itemHoverColor": "#bedb39",
  "searchFocus": "#fd7400",
  "searchMatch": "#1f8a70",
  "selectedBackgroundColor": "#1f8a70",
  "selectedForegroundColor": "#ffe11a",
  "titleBarBackgroundColor": "#004358",
  "titleBarForegroundColor": "#ffe11a",
  "tooltipBackgroundColor": "#708090",
  "tooltipForegroundColor": "#ffffff",
  "transitionDelay": "0.5s",
}
`;
